<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/about_layout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/diary_view_bg"
    android:orientation="vertical" >
    
	<RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="48dip"
        android:background="@drawable/head_blue_background"
        android:clickable="true" >

        <ImageView
            android:id="@+id/back_about"
            android:layout_width="54dip"
            android:layout_height="fill_parent"
            android:layout_gravity="center"
            android:background="@drawable/edit_selector"
            android:clickable="true"
            android:scaleType="centerInside"
            android:src="@drawable/back" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="@string/about"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:textStyle="bold" />
    </RelativeLayout>
    <LinearLayout
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/layout_selector">
        <TextView 
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:textSize="20sp"
            android:textColor="@color/common_black"
            android:text="@string/developer_info"/>
        <LinearLayout 
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/layout_selector"
            android:layout_marginTop="5dp">
            <TextView 
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:textSize="20sp"
            	android:textColor="@color/common_black"
                android:text="@string/developer"/>
            <TextView 
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:textSize="20sp"
            	android:textColor="@color/common_black"
            	android:text="@string/qq"/>
            <TextView 
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:textSize="20sp"
                android:autoLink="all"
            	android:textColor="@color/common_black"
            	android:text="@string/email"/>
            <TextView 
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:layout_margin="2dp"
                android:autoLink="all"
            	android:textColor="@color/common_black"
            	android:text="@string/bbs"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/layout_selector"
        android:orientation="vertical">
        <TextView 
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:textSize="20sp"
            android:textColor="@color/common_black"
            android:text="@string/version_info"/>
        <LinearLayout 
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/layout_selector"
            android:layout_marginTop="5dp">
            <TextView 
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:textSize="20sp"
            	android:textColor="@color/common_black"
                android:text="@string/version"/>
            <TextView 
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:textSize="20sp"
            	android:textColor="@color/common_black"
            	android:text="@string/version_ex"/>
            <TextView 
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:textSize="20sp"
                android:autoLink="all"
            	android:textColor="@color/common_black"
            	android:text="@string/note"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
