<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical" >
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="150dp" >
        <LinearLayout
            android:id="@+id/lable1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="30dp"
            android:addStatesFromChildren="true"
            android:background="@drawable/layout_selector"
            android:padding="5dp" >

            <TextView
                style="@style/myStyle.BlackBigText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/set_pass" />
            <EditText
                android:id="@+id/set_pass"
                style="@style/myStyle.BlackBigText"
                android:layout_width="fill_parent"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/input_pass"
                android:password="true"  
                android:maxLength="30"
                android:numeric="integer"
                android:singleLine="true" >
                <requestFocus />
            </EditText>
        </LinearLayout>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/lable1"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="10dp"
            android:addStatesFromChildren="true"
            android:background="@drawable/layout_selector"
            android:padding="5dp" >

            <TextView
                style="@style/myStyle.BlackBigText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/confirm_pass" />

            <EditText
                android:id="@+id/confirm_pass"
                style="@style/myStyle.BlackBigText"
                android:layout_width="fill_parent"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/input_confirm_pass"
                android:maxLength="15"
                android:password="true"
                android:numeric="integer"
                android:singleLine="true" />
        </LinearLayout>
    </RelativeLayout>
</LinearLayout>